Merged revisions 14973-14974 via svnmerge from https://mifos.dev.java.net/svn/mifos/branches/unitTestImprovements
........
  r14973 | ugupta | 2009-06-04 03:57:15 -0500 (Thu, 04 Jun 2009) | 3 lines
  
  Just reformatting of unit tests source according to the Mifos Coding convention (based on Eclipse spacing/formatting settings which is already checked in).
  STEP: Right Click on mifos/src/test/java -> source -> format.
........
  r14974 | ugupta | 2009-06-04 04:11:17 -0500 (Thu, 04 Jun 2009) | 2 lines
  
  Just reformatting remaining in the first commit(due to network disconnection) of unit tests source according to the Mifos Coding convention (based on Eclipse spacing/formatting settings which is already checked in).
  STEP: Right Click on mifos/src/test/java -> source -> format.
........


git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@14980 a8845c50-7012-0410-95d3-8e1449b9b1e4